--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 :root {
   --black: #150605;
   --red: #ea453c;
-  --pink: #f47b6e;
+  --pink: #d72b37;
   --light-blue: #effbfe;
-  --blue: #ace6ec;
+  --blue: #84c38c;
 }
 
 html,
@@ -41,7 +41,7 @@ main.cart-page {
 }
 
 div.order-button > button {
-  border-color: var(--black);
+  border-color: var(--pink);
   cursor: pointer;
   padding: 15px;
   transition: all 0.2s ease-in-out;
@@ -52,7 +52,7 @@ div.order-button > button:focus {
 }
 
 div.order-button > button:disabled {
-  border-color: lightgray;
+  border-color: var(--pink);
 }
 
 .cart-item {
@@ -97,7 +97,7 @@ img.image-grid {
 }
 
 .cart {
-  color: var(--blue);
+  color: var(--pink);
   font-size: 1.2rem;
   position: absolute;
   top: 5px;
@@ -122,8 +122,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--pink);
-  color: var(--light-blue);
+  background-color: var(--blue);
+  color: var(--pink);
   padding: 0 10px;
   -webkit-box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
   -moz-box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
